language/move-lang/tests/move_check/translated_ir_tests/move/signer/does_not_have_store.move
module M {
    struct S<T> has key {}

    fun t(_account: &signer) {
        move_to(account, S<signer> {})
    }
}
